--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>319 Tagged Open Ruby Bugs as of 2023-06-12 11:16:38 +0900</title>
+<title>321 Tagged Open Ruby Bugs as of 2023-06-22 00:47:23 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
@@ -11,13 +11,13 @@
 <input type="submit" value="build" />
 <input type="submit" value="patch" />
 <input type="submit" value="test" />
-<input type="submit" value="encoding" />
 <input type="submit" value="ext" />
+<input type="submit" value="encoding" />
 <input type="submit" value="lib" />
 <input type="submit" value="maybenotbug" />
-<input type="submit" value="regexp" />
 <input type="submit" value="thread" />
 <input type="submit" value="perf" />
+<input type="submit" value="regexp" />
 <input type="submit" value="cygwin" />
 <input type="submit" value="parser" />
 <input type="submit" value="tracepoint" />
@@ -25,15 +25,15 @@
 <input type="submit" value="notbug" />
 <input type="submit" value="autoload" />
 <input type="submit" value="coverage" />
+<input type="submit" value="doc" />
 <input type="submit" value="yjit" />
 <input type="submit" value="backport" />
-<input type="submit" value="doc" />
 <input type="submit" value="refine" /></p>
 <label for="filter">Filter Tags:</label>
 <input id="filter" type="text" size="80" />
-(<span id="matched">319</span> matched)
+(<span id="matched">321</span> matched)
 <table>
-<caption>319 Tagged Open Ruby Bugs as of 2023-06-12 11:16:38 +0900</caption>
+<caption>321 Tagged Open Ruby Bugs as of 2023-06-22 00:47:23 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
@@ -42,6 +42,27 @@
 </tr>
 </thead>
 <tbody>
+<tr class=" ext ">
+<td><a href="https://bugs.ruby-lang.org/issues/19738">19738</a>
+</td>
+<td>ext</td>
+<td><a href="https://bugs.ruby-lang.org/issues/19738">`ObjectSpace.each_object.to_a` crashes in `make runirb`.</a>
+</td>
+</tr>
+<tr class=" doc ">
+<td><a href="https://bugs.ruby-lang.org/issues/19728">19728</a>
+</td>
+<td>doc</td>
+<td><a href="https://bugs.ruby-lang.org/issues/19728">Automate (checking of) Regexp character property documentation</a>
+</td>
+</tr>
+<tr class=" notbug core ">
+<td><a href="https://bugs.ruby-lang.org/issues/19726">19726</a>
+</td>
+<td>notbug core</td>
+<td><a href="https://bugs.ruby-lang.org/issues/19726">Script loadde twice when requiring self</a>
+</td>
+</tr>
 <tr class=" os/arch ">
 <td><a href="https://bugs.ruby-lang.org/issues/19716">19716</a>
 </td>
@@ -796,13 +817,6 @@
 </td>
 <td>os/arch</td>
 <td><a href="https://bugs.ruby-lang.org/issues/18733">Ruby GC problems cause performance issue with Ractor</a>
-</td>
-</tr>
-<tr class=" regexp ">
-<td><a href="https://bugs.ruby-lang.org/issues/18686">18686</a>
-</td>
-<td>regexp</td>
-<td><a href="https://bugs.ruby-lang.org/issues/18686">Regexp supporting unexpected age properties in Ruby &lt; 3.2</a>
 </td>
 </tr>
 <tr class=" ext ">
